--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ fabric.properties
 
 # *.iml
 # modules.xml
-# .idea/misc.xml 
+# .idea/misc.xml
 # *.ipr
 
 
@@ -149,7 +149,7 @@ tags
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
-Makefile
+#Makefile
 cmake_install.cmake
 install_manifest.txt
 CTestTestfile.cmake
@@ -576,4 +576,3 @@ __pycache__/
 
 ### VisualStudio Patch ###
 build/
-
